2008-08-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* res.pro: Now installing fwbuilder.desktop file on Linux and
	application icons under $DATADIR/icons/hicolor/ (sizes 128x128
	16x16 24x24 256x256 32x32 48x48 512x512 72x72)

	* bug #2036912 "fwbuilder b442 does not build". Added missing
	forward declarations and #include for gcc 4.3

	* Applied patch for gcc 4.3 per bug #2036881 "gcc 4.3 patch for
	b442", Mandriva Cooker patch
	http://svn.mandriva.com/cgi-bin/viewvc.cgi/packages/cooker/fwbuilder/current/SOURCES/fwbuilder-3.0.0-gcc4.3.patch
	
2008-08-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* iptAdvancedDialog_en_US.html: Added help file for the firewall
	settings dialog for iptables firewalls

	* Help.cpp (Help::Help): generic built-in help framework. Help
	files are created in .html format in src/res/help directory. Help
	files can be localized, locale name is part of the file name; we
	need to create separate file for each supported language.

	First dialog to get associated help panel that can be activated by
	clicking "Help" button is Linux 2.4/2.6 firewall host settings
	dialog.

2008-08-01  Vadim Kurland  <vadim@vk.crocodile.org>

	* ipt.pro: Eliminated dependency on QT in all policy compilers.
	Compiler binaries can be deployed on machines without QT and X11.

	* ObjectManipulator.cpp (ObjectManipulator::contextMenuRequested):
	fixed bug #2023243: "IPv6 - Some objects missing from context
	menus". Added items "New Address IPv6" and "New Network IPv6" to
	context menus associated with folders "Addresses" and "Networks"
	in the tree.

2008-08-01  Vadim Kurland  <vadim@vk.crocodile.org>

	* Fixed build on Mac, starting with rev 433 code is built with QT
	4.4.1 and works on both Leopard and Tiger.

	* list_object.cpp (getAttributeValue): added command "list" to
	fwbedit. This command can print contents of one object, an object
	and all objects below it in the tree or contents of a
	group. Object's attributes can be arranged in the output according